--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16.3)
 set(CMAKE_CXX_STANDARD 20)
-project(Thicken2)
+project(PFPOffset)
 
 
 include_directories("/opt/homebrew/include")
@@ -33,10 +33,10 @@ file (GLOB CppFile
         MeshKernel/*
         Eigen/*
         )
-add_executable(Thicken2 main.cpp DSU.cpp remeshing.cpp ${CppFile} )
+add_executable(PFPOffset main.cpp DSU.cpp remeshing.cpp ${CppFile} )
 
 if(APPLE)
-    target_link_libraries(Thicken2
+    target_link_libraries(PFPOffset
             /opt/homebrew/lib/libgmp.dylib
             -lpthread
             /opt/homebrew/lib/libmpfr.dylib
@@ -45,7 +45,7 @@ if(APPLE)
             /opt/homebrew/lib/libgflags.dylib
             )
 else()
-    target_link_libraries(Thicken2
+    target_link_libraries(PFPOffset
             -lgmp
             -lpthread
             -lmpfr
